# hats2

./: .gitignore  README.md  main.py  playwright_main.py  pyproject.toml  selmain.py
utils/: selenium_template.py  util.py
